@@ -1,6 +1,7 @@
 ChangeLog
 
 Upcoming version
+[FEATURE] Add garbage collection for statistics table
 [BUGFIX]  Use correct table names for query builder or connection. Thanks to Andreas Kießling. https://github.com/tpwd/ke_search/issues/228
 [TASK]    Add check if MySQL indexes are enabled on the index table and show an error in the backend module if not
 [BUGFIX]  Respect configured Doktypes while Auto-Tagging #235. Thanks to magicHatOfTYPO3. https://github.com/tpwd/ke_search/pull/235
